:heart: Improve SEO using react-helmet-async

--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Shopee At Home</title>
+    <title>Shopee At Home | Trang chủ</title>
+    <meta
+      name="description"
+      content="A shopee clone edition used for studying purposes"
+      data-rh="true"
+    />
+    <meta
+      property="og:title"
+      content="Shopee At Home"
+    />
+    <meta
+      property="og:image"
+      content="https://deo.shopeemobile.com/shopee/shopee-mobilemall-live-sg/26c9324913c021677768c36975d635ef.png"
+    />
   </head>
   <body>
     <div id="root"></div>
